<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<LinearLayout
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/turnip_render_mode"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:paddingBottom="8dp" />

		<Spinner
			style="@style/ComboBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/SRenderMode"
			android:spinnerMode="dialog" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/turnip_present_mode"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:paddingBottom="8dp" />

		<Spinner
			style="@style/ComboBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/SPresentMode"
			android:spinnerMode="dialog" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/turnip_max_device_memory"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:paddingBottom="8dp" />

		<Spinner
			style="@style/ComboBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/SMaxDeviceMemory"
			android:spinnerMode="dialog" />
	</LinearLayout>
</ScrollView>
